--- a/package.json
+++ b/package.json
@@ -4,20 +4,41 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --open --mode development --hot",
+    "build": "webpack --config ./webpack.prod.config.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/katienza/e-Kammerce.git"
   },
-  "author": "",
+  "author": "Ken Atienza",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/katienza/e-Kammerce/issues"
   },
   "homepage": "https://github.com/katienza/e-Kammerce#readme",
   "devDependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
+    "babel-polyfill": "^6.26.0",
+    "css-loader": "^3.0.0",
+    "file-loader": "^4.0.0",
+    "react-hot-loader": "^4.12.2",
+    "style-loader": "^0.23.1",
     "webpack": "^4.35.2",
+    "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2"
+  },
+  "dependencies": {
+    "html-loader": "^0.5.5",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "redux": "^4.0.1"
   }
 }
