--- a/package.json
+++ b/package.json
@@ -34,7 +34,12 @@
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "express": "^4.17.1",
     "html-loader": "^0.5.5",
+    "mongoose": "^5.6.3",
+    "morgan": "^1.9.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
