--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "html-loader": "^0.5.5",
     "mongoose": "^5.6.3",
     "morgan": "^1.9.1",
+    "nodemon": "^1.19.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
