--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "history": "^4.9.0",
     "html-loader": "^0.5.5",
     "mongoose": "^5.6.3",
     "morgan": "^1.9.1",
