--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
+    "@material-ui/core": "^4.2.0",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
